--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,4 @@
 2:30 PM 12/16/2013 (Sam) Added Sandwiches to button layout. PrefixMod needs to be fixed for ''Condiments'' Menu Modifier.
 
 
+5:10 PM 12/16/2013 (Will) Mods to sides
